# portfolio-blog

./: .dockerignore  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: ruff.yml
config/: app.env.example  nginx.conf
config/app/: app.env.example
config/mongodb/: mongodb.env.example
config/nginx/: nginx.prod.conf
config/postgres/: postgres.env.example
src/: .flake8  Dockerfile  alembic.ini  pyproject.toml
src/app/: main.py
src/app/core/: config.py  security.py
src/app/crud/: __init__.py  base.py  crud_post.py  crud_user.py
src/app/db/: base.py  base_class.py  session.py
src/app/models/: __init__.py  post.py  post_events.py  user.py
src/app/schemas/: __init__.py  login.py  logs.py  main.py  post.py  user.py
src/app/static/bootstrap/css/: bootstrap.min.css
src/app/templates/: base.html  blog.html  index.html  post.html
src/app/templates/admin/: add-post.html  delete-post.html  login.html  update-post.html
src/app/utils/: create_user.py  custom_functions.py  email.py  email_utils.py  file_operations.py  image_operations.py  mongodb_utils.py  rate_limiter.py
src/app/views/: depends.py  router.py
src/app/views/routers/: main.py  user.py
src/commands/: create_user.py
src/migrations/: env.py
src/migrations/versions/: 07c09e1cbd97_post_image_cant_be_null.py  ac935b3059fa_init.py
